Student work card update - Hover state - Spacing fix

--- a/app/src/scss/components/_base.scss
+++ b/app/src/scss/components/_base.scss
@@ -25,8 +25,8 @@ body {
 }
 
 .icon {
-  height: rem(16);
-  width: rem(16);
+  height: 1em;
+  width: 1em;
 }
 
 .avatar {
